--- a/project-portifolio/index.html
+++ b/project-portifolio/index.html
@@ -15,9 +15,9 @@
           <label class="checkbox" for="toggle">
             <div class="trace"></div>
             <div class="trace"></div>
-            <div class="trace"></div>            
-          </label>
-          <div class="menu"></div>
+            <div class="trace"></div>  
+          </label><!--checkbox-->
+          <div class="menu"></div><!--menu-->
           <nav class="menu-itens">
             <ul>
               <li>
@@ -30,52 +30,55 @@
                 <a href="#">Projetos</a>
               </li>
             </ul>
-          </nav>        
-        </div>
-      </div>
-    </div>
+          </nav><!--menu-itens-->     
+        </div><!--checkbox-wrapper-->
+     </div><!--checkbox-container-->     
+     </div><!--header-->
     <h1>Gildaste Martins</h1>
     <h2>Administrador</h2>
     <h2>Developer-Junior</h2>
-    <div>social-media</div>
+    <div class="social-media">
       <a href="#">Linkedin</a>
       <a href="#">Github</a>
       <a href="#">Instagram</a>
       <a href="#">WhatsApp</a>
-  </header> 
+    </div><!--social-media-->   
+  </header><!--header-container--> 
   <main class="container">
     <div class="card-container">
        <div class="card">
-          <div class="card-wrapper">
-            <h2>Projeto 1</h2>
-            <p>Vem ver</p>
-          </div>     
-      </div>
-      <div class="card-text">
+           <div class="card-wrapper">
+              <h2>Projeto 1</h2>
+              <p>Vem ver</p>
+           </div><!--card-wrapper-->
+        </div><!--card-->    
+    </div><!--card-container-->
+    <div class="card-text">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Id obcaecati voluptate assumenda! Ducimus, sed aperiam! Cumque quisquam dolor velit minima nostrum at sed quas placeat. Assumenda minus ab et delectus?
-      </div>
-      <div class="card-container">
+    </div><!--card-text-->
+    <div class="card-container">
         <div class="card">
             <div class="card-wrapper">
-              <h2>Projeto 2</h2>
-              <p>Vem ver</p>
-            </div>     
-        </div>
-        <div class="card-text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Id obcaecati voluptate assumenda! Ducimus, sed aperiam! Cumque quisquam dolor velit minima nostrum at sed quas placeat. Assumenda minus ab et delectus?
-        </div>
-        <div class="card-container">
-          <div class="card">
-              <div class="card-wrapper">
-                <h2>Projeto 3</h2>
-                <p>Vem ver</p>
-              </div>     
-          </div>
-          <div class="card-text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Id obcaecati voluptate assumenda! Ducimus, sed aperiam! Cumque quisquam dolor velit minima nostrum at sed quas placeat. Assumenda minus ab et delectus?
-          </div>
-    </div>
-  </main>
+               <h2>Projeto 2</h2>
+               <p>Vem ver</p>
+            </div><!--card-wrapper-->
+         </div><!--card-->    
+     </div><!--card-container-->
+     <div class="card-text">
+         Lorem ipsum dolor sit amet consectetur adipisicing elit. Id obcaecati voluptate assumenda! Ducimus, sed aperiam! Cumque quisquam dolor velit minima nostrum at sed quas placeat. Assumenda minus ab et delectus?
+     </div><!--card-text-->
+     <div class="card-container">
+        <div class="card">
+            <div class="card-wrapper">
+               <h2>Projeto 1</h2>
+               <p>Vem ver</p>
+            </div><!--card-wrapper-->
+         </div><!--card-->    
+     </div><!--card-container-->
+     <div class="card-text">
+         Lorem ipsum dolor sit amet consectetur adipisicing elit. Id obcaecati voluptate assumenda! Ducimus, sed aperiam! Cumque quisquam dolor velit minima nostrum at sed quas placeat. Assumenda minus ab et delectus?
+     </div><!--card-text-->     
+  </main><!--container--> 
   <footer class="footer">
     @GilMartins!
   </footer>
